refactor: 判空改用 JDK Objects,移除已 deprecated 的 defaultIfNull
ObjectUtils.defaultIfNull(T,T) 在本專案解析到的 commons-lang3 3.19.0
已標記 @Deprecated（其實作僅為 getIfNull 的一行代理），4.0 將移除。
改用 JDK 的 Objects.requireNonNullElse / requireNonNullElseGet：
不需第三方相依，且符合 code-standards 決策表「純 null 檢查用 Objects」。

- 20 處 defaultIfNull、6 處 getIfNull(supplier) 全數改寫
- 抽出 TraceIdFilter.currentTraceId()，收斂 11 個 controller 重複的
  meta() 內容與散落 12 處的 "missing-trace-id" 字面值
- ClientIpResolver.UNKNOWN 改為 public，WebSocketConnectionManager
  不再自行硬編 "unknown"；兩者若不一致會使 per-IP 連線上限失效
- 補齊遺漏：null-or-blank 判斷 5 處、預設值三元 3 處
- 移除 BacktestMapper.hasText（isNotBlank 的手寫代理）
- 改用 StringUtils.trimToNull / trimToEmpty 共 4 處
- 修正 5 個檔案被插入既有排序群組中間的 import
- code-standards.md：標註 defaultIfNull 不可再用，補上
  requireNonNullElse(Get) 條目，並解除與決策表的矛盾

驗證：mvn -o test 全 10 個模組 BUILD SUCCESS；mvn -o clean compile 的
deprecation note 由 7 個模組降至 1 個（僅存者為既有的 Spring Batch /
WsMessageParser，與本次重構無關）。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>